# Clog

./: .gitignore  pyproject.toml
resources/: log.sql  meta.sql
src/: main.py  query_db.py  test.py
src/app/routes/: index.py  login.py
src/app/static/css/: style.css
src/app/static/js/: main.js
src/app/templates/: entries.html  head.html  index.html  login.html
src/core/: ingest.py  log_database.py  meta_database.py  search.py
