[project]
name = "clog"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mikkel Sørensen", email = "m_hooge@hotmail.com"},
]
dependencies = [
    "file:///${PROJECT_ROOT}/../scripts/mhooge_flask#egg=mhooge-flask",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
